<resources>
    <string name="app_name">My Application</string>
    <string name="text_page">Personal page</string>
    <string name="text_posts">Posts</string>
    <string name="text_followers">Followers</string>
    <string name="text_following">Following</string>
    <string name="text_username">Username</string>
    <string name="text_address">Address</string>
    <string name="text_description">Description</string>
    <string name="text_directions">DIRECTIONS</string>
    <string name="text_call">CALL</string>
    <string name="text_save">SAVE</string>
    <string name="text_website">WEBSITE</string>
</resources>